# aiscope

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  activate.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg
aiscope/: entrypoint.sh  manage.py
aiscope/aiscope/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
aiscope/core/: admin.py  apps.py  models.py  processors.py
aiscope/core/fixtures/resources/: embeddings.json  openai-embeddings.01.json  openai-embeddings.02.json  openai-embeddings.03.json  openai-json-prompt.01.json  openai-plain-prompt.01.json  prompts.json
aiscope/core/jinja2/: syntax-error.tpl
aiscope/core/migrations/: 0001_initial.py  0002_chatgpt_prompts.py
aiscope/core/openai/resources/: embeddings.py  prompts.py
aiscope/core/tasks/: __init__.py  embeddings.py
aiscope/dutch_parliament/: admin.py  apps.py  constants.py
aiscope/dutch_parliament/jinja2/: b1-language-level.tpl  topic-and-title.json.tpl
aiscope/dutch_parliament/migrations/: 0001_initial.py
aiscope/dutch_parliament/models/: __init__.py
aiscope/dutch_parliament/objectives/: __init__.py  motion_content.py  vote_records.py
aiscope/dutch_parliament/tasks/: __init__.py  embeddings.py  motion_texts.py  motions.py  prompts.py
aiscope/dutch_parliament/tests/: test_dutch_parliament_vote_records.py  test_motions_dataset.py
aiscope/political_discourse/: admin.py  apps.py
aiscope/political_discourse/migrations/: 0001_initial.py
aiscope/political_discourse/models/: __init__.py  documents.py
aiscope/political_discourse/tasks/: __init__.py
commands/: testing.py  utils.py
research/creative_writing/style_message_experiment/: prompt.md  results_named_prompt.md  results_styled_prompt.md  results_vanilla_prompt.md  style_message.md
services/postgres/docker-entrypoint-initdb.d/: initdb.sh
services/zapier/extract_ingredients/: data.py  main.py  parser.py
(+32 files in other folders)
