[tool.poetry]
name = "aiscope"
version = "0.0.1"
description = "A Datascope project that is geared towards using AI and specifically Large Language Models (LLM)."
authors = ["Fako Berkers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "~4.2.8"
uvicorn = "^0.25.0"
psycopg2 = "^2.9.9"
ipython = "^8.20.0"
celery = {extras = ["redis"], version = "^5.3.6"}
watchdog = "^3.0.0"
redis = "^5.0.1"
whitenoise = "^6.6.0"
datagrowth = {path = "../datagrowth", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
