[tool.poetry]
name = "aiscope"
version = "0.0.1"
description = "A Datascope project that is geared towards using AI and specifically Large Language Models (LLM)."
authors = ["Fako Berkers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "~4.2.8"
uvicorn = "^0.25.0"
psycopg2 = "^2.9.9"
ipython = "^8.20.0"
celery = {extras = ["redis"], version = "^5.3.6"}
watchdog = "^3.0.0"
redis = "^5.0.1"
whitenoise = "^6.6.0"
datagrowth = {git = "https://github.com/fako/datagrowth.git", rev = "develop"}
pytest = "^7.4.4"
invoke = "^2.2.0"
pytest-django = "^4.7.0"
flake8 = "^7.0.0"
ipdb = "^0.13.13"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "aiscope.settings"
python_files = ["test_*.py", "tests.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
